--- a/app/src/main/res/layout/activity_signal_generator.xml
+++ b/app/src/main/res/layout/activity_signal_generator.xml
@@ -7,7 +7,7 @@
     tools:context="com.example.work.dmm.activities.measurementActivities.SignalGeneratorActivity">
 
     <Spinner
-        android:id="@+id/spinner_SigGen"
+        android:id="@+id/spinner_waveform_SigGen"
         android:layout_width="368dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/LineChart_SigGen"
         android:layout_width="match_parent"
         android:layout_height="280dp"
-        android:layout_below="@id/spinner_SigGen"
+        android:layout_below="@id/spinner_waveform_SigGen"
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="8dp"/>
 
@@ -33,7 +33,7 @@
         android:id="@+id/txtv_period"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/spinner_SigGen"
+        android:layout_alignStart="@+id/spinner_waveform_SigGen"
         android:layout_below="@+id/LineChart_SigGen"
         android:layout_marginTop="18dp"
         android:text="Period:" />
@@ -61,7 +61,7 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/editText_period_SigGen"
-        android:layout_alignEnd="@+id/spinner_SigGen"
+        android:layout_alignEnd="@+id/spinner_waveform_SigGen"
         android:onClick="onSetPeriodClick"
         android:text="Set" />
 
@@ -99,7 +99,7 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/editText_freq_SigGen"
-        android:layout_alignEnd="@+id/spinner_SigGen"
+        android:layout_alignEnd="@+id/spinner_waveform_SigGen"
         android:onClick="onSetFreqClick"
         android:text="Set" />
 
@@ -137,7 +137,7 @@
         android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/editText_Amplitude_SigGen"
-        android:layout_alignEnd="@+id/spinner_SigGen"
+        android:layout_alignEnd="@+id/spinner_waveform_SigGen"
         android:onClick="onSetAmplClick"
         android:text="Set" />
 
