--- a/app/src/main/res/layout/activity_dccurrent.xml
+++ b/app/src/main/res/layout/activity_dccurrent.xml
@@ -5,7 +5,7 @@
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.work.dmm.activities.measurementActivities.DCcurrentActivity">
+    tools:context="com.example.work.dmm.activities.measurementActivities.Level1.DCcurrentActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
