--- a/app/src/main/res/layout/activity_frequency_response.xml
+++ b/app/src/main/res/layout/activity_frequency_response.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.measurementActivities.FrequencyResponseActivity">
+    tools:context=".activities.measurementActivities.Level3.FrequencyResponseActivity">
 
     <Button
         android:id="@+id/button2"
