--- a/app/src/main/res/layout/activity_resistance.xml
+++ b/app/src/main/res/layout/activity_resistance.xml
@@ -1,32 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/activity_dcvoltage"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.measurementActivities.Level1.DCvoltageActivity">
+    tools:context="com.example.work.dmm.activities.measurementActivities.Level1.DCcurrentActivity">
 
     <RelativeLayout
+        android:id="@+id/gaugeLayout_resistance"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/gaugeLayout"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
         <com.example.work.dmm.displayAndVisualisationClasses.Speedometer
-            android:id="@+id/gauge"
+            android:id="@+id/ResistanceGauge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             custom:currentSpeed="3"
             custom:maxSpeed="10"
             custom:scaleTextSize="10dp" />
-
     </RelativeLayout>
 
-
     <Button
-        android:id="@+id/btn_ClearLog"
+        android:id="@+id/clearResistanceLog_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -35,8 +33,8 @@
         android:text="Clear Log" />
 
     <Button
-        android:id="@+id/button9"
-        android:layout_width="wrap_content"
+        android:id="@+id/ExportResistanceData_btn"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:onClick="onClickExportData"
         android:text="Export Data"
@@ -44,36 +42,26 @@
         android:layout_alignParentEnd="true" />
 
     <Button
-        android:id="@+id/button8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:onClick="onClickOscilloscopeMode"
-        android:text="Oscilloscope" />
-
-    <Button
-        android:id="@+id/button7"
+        android:id="@+id/logResistance_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:onClick="logVoltage"
-        android:text="Log Voltage" />
+        android:onClick="logResistance"
+        android:text="Log Resistance" />
 
     <Switch
-        android:id="@+id/loggingToggle"
+        android:id="@+id/autoLogResistance_swt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btn_ClearLog"
-        android:layout_alignBottom="@+id/btn_ClearLog"
-        android:layout_alignParentEnd="true"
-        android:text="Auto Logging" />
+        android:text="Auto Logging"
+        android:layout_alignBaseline="@+id/clearResistanceLog_btn"
+        android:layout_alignParentEnd="true" />
 
     <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/loggingLineChart_Resistance"
         android:layout_marginTop="220dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/loggingLineChart"
-        android:layout_above="@+id/button9" />
+        android:layout_above="@+id/ExportResistanceData_btn" />
 
 </RelativeLayout>
