--- a/app/src/main/res/layout/activity_voltage_oscilloscope.xml
+++ b/app/src/main/res/layout/activity_voltage_oscilloscope.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.measurementActivities.VoltageOscilloscopeActivity">
+    tools:context=".activities.measurementActivities.Level2.VoltageOscilloscopeActivity">
 
     <LinearLayout
         android:layout_width="wrap_content"
