--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
-        android:text="Bluetooth device MAC address:"
+        android:text="DMM MAC address:"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="60dp"
         android:onClick="onConfirmButton_Address"
         android:text="Confirm"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
@@ -256,5 +256,17 @@
         android:text="CONFIRM"
         app:layout_constraintBaseline_toBaselineOf="@+id/freqRespStart"
         app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/btn_scanQR"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="onCLickScanQR"
+        android:text="Scan QR"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        app:layout_constraintRight_toLeftOf="@+id/btn_accpetNewID" />
 
 </android.support.constraint.ConstraintLayout>
