--- a/app/src/main/res/layout/activity_capacitance.xml
+++ b/app/src/main/res/layout/activity_capacitance.xml
@@ -6,4 +6,64 @@
     android:layout_height="match_parent"
     tools:context="com.descon.work.dmm.activities.measurementActivities.Level3.CapacitanceActivity">
 
+    <TextView
+        android:id="@+id/capacitance_valueDisplay_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Capacitance: NaN"
+        android:textSize="24sp"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="16dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:id="@+id/capacitance_chart"
+        android:layout_above="@+id/capacitance_logCapacitance_btn"
+        app:layout_constraintTop_toBottomOf="@+id/capacitance_valueDisplay_txt"
+        android:layout_marginBottom="11dp"
+        app:layout_constraintBottom_toTopOf="@+id/capacitance_logCapacitance_btn"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="3dp"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/capacitance_logCapacitance_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:onClick="onClickLogCapacitance"
+        android:text="LOG CAPACITANCE"
+        app:layout_constraintBottom_toTopOf="@+id/capacitance_exportData_btn"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+    <Button
+        android:id="@+id/capacitance_exportData_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Export DATA"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="@+id/capacitance_logCapacitance_btn"
+        tools:layout_constraintLeft_creator="1"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintLeft_toLeftOf="@+id/capacitance_logCapacitance_btn" />
+
 </android.support.constraint.ConstraintLayout>
