--- a/app/src/main/res/menu/activity_connection_screen_drawer.xml
+++ b/app/src/main/res/menu/activity_connection_screen_drawer.xml
@@ -42,6 +42,10 @@
         android:id="@+id/menu_bottom"
         android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_calibrate"
+            android:icon="@drawable/ic_menu_manage"
+            android:title="Calibrate DMM" />
+        <item
             android:id="@+id/nav_disconnect"
             android:icon="@drawable/ic_menu_manage"
             android:title="Disconnect" />
